# AndroidFaceDetect

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/meizhuo/wephone/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp
app/src/main/java/org/opencv/samples/facedetect/: CameraActivity.java  FdActivity.java  MyActivity.java
app/src/main/res/layout/: my_activity.xml
app/src/main/res/raw/: my_cascade.xml
app/src/test/java/org/meizhuo/wephone/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
